# reqwest-impersonate

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
examples/: blocking.rs  form.rs  json_dynamic.rs  json_typed.rs  simple.rs  tls.rs  tor_socks.rs
examples/wasm_github_fetch/: package-lock.json
src/: connect.rs  cookie.rs  error.rs  lib.rs  proxy.rs  redirect.rs  tls.rs
src/async_impl/: body.rs  client.rs  decoder.rs  mod.rs  multipart.rs  request.rs  response.rs
src/browser/: cert_compressor.rs  mod.rs
src/browser/chrome/ver/: v104.rs  v105.rs  v106.rs  v108.rs
src/dns/: gai.rs  mod.rs
src/imp/: cert_compressor.rs  mod.rs
src/imp/chrome/: mod.rs  v100.rs  v101.rs  v102.rs  v103.rs  v104.rs  v105.rs  v106.rs  v107.rs  v108.rs  v109.rs  v110.rs  v111.rs  v112.rs  v113.rs  v114.rs  v115.rs  v116.rs  v117.rs  v118.rs
src/wasm/: client.rs
tests/: badssl.rs  blocking.rs  brotli.rs  client.rs  client_mut.rs  cookie.rs  deflate.rs  dns_cache.rs  gzip.rs  multipart.rs  proxy.rs  redirect.rs  timeouts.rs  upgrade.rs  wasm_simple.rs  zstd.rs
tests/support/: server.rs
