[package]
name = "reqwest-impersonate"
version = "0.11.13"                                                 # remember to update html_root_url
description = "A reqwest fork that impersonates the Chrome browser"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client"]
repository = "https://github.com/seanmonstar/reqwest"
documentation = "https://docs.rs/reqwest"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"
autotests = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = [
    "boring-tls",
    "json",
    "stream",
    "cookies",
    "socks",
    "gzip",
    "brotli",
    "deflate",
    "multipart",
]
cookies = ["cookie_crate", "cookie_store"]
gzip = ["async-compression", "async-compression/gzip", "tokio-util"]
brotli = ["async-compression", "async-compression/brotli", "tokio-util"]
deflate = ["async-compression", "async-compression/zlib", "tokio-util"]
json = ["serde_json"]
multipart = ["mime_guess"]
stream = ["tokio/fs", "tokio-util"]
socks = ["tokio-socks"]
boring-tls = [
    "boring",
    "tokio-boring",
    "hyper-boring",
    "boring-sys",
    "foreign-types",
]

# When enabled, disable using the cached SYS_PROXIES.
__internal_proxy_sys_no_cache = []

[dependencies]
base64 = "0.22"
http = "0.2"
url = "2"
bytes = "1"
serde = "1"
serde_urlencoded = "0.7"
tower-service = "0.3"
brotli = "8"

# Optional deps...

## json
serde_json = { version = "1", optional = true }
## multipart
mime_guess = { version = "2", default-features = false, optional = true }

encoding_rs = "0.8"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
http-body = "0.4"
hyper = { version = "0.14", default-features = false, features = [
    "tcp",
    "http1",
    "http2",
    "client",
    "runtime",
] }
h2 = "0.4"
once_cell = "1"
log = "0.4"
mime = "0.3"
percent-encoding = "2"
tokio = { version = "1", default-features = false, features = [
    "net",
    "time",
] }
pin-project-lite = "0.2"
ipnet = "2"

## boring-tls
boring = { git="https://github.com/cloudflare/boring", package = "boring", optional = true, features = ["pq-experimental"] }
boring-sys = { git="https://github.com/cloudflare/boring", package = "boring-sys", optional = true, features = ["pq-experimental"] }
tokio-boring = { git="https://github.com/cloudflare/boring", package = "tokio-boring", optional = true, features = ["pq-experimental"] }
hyper-boring = { git="https://github.com/cloudflare/boring", package = "hyper-boring", optional = true, features = ["pq-experimental"] }
foreign-types = { version = "0.5.0", optional = true }

## cookies
cookie_crate = { version = "0.18", package = "cookie", optional = true }
cookie_store = { version = "0.21", optional = true }

## compression
async-compression = { version = "0.4", default-features = false, features = ["tokio"], optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["codec", "io"], optional = true }

## socks
tokio-socks = { version = "0.5", optional = true }

[dev-dependencies]
env_logger = "0.11"
hyper = { version = "0.14", default-features = false, features = [
    "tcp",
    "stream",
    "http1",
    "http2",
    "client",
    "server",
    "runtime",
] }
serde = { version = "1.0", features = ["derive"] }
libflate = "2.1.0"
brotli = "8"
doc-comment = "0.3"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[[example]]
name = "json_dynamic"
path = "examples/json_dynamic.rs"
required-features = ["json"]

[[example]]
name = "json_typed"
path = "examples/json_typed.rs"
required-features = ["json"]

[[example]]
name = "tor_socks"
path = "examples/tor_socks.rs"
required-features = ["socks"]

[[example]]
name = "form"
path = "examples/form.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[test]]
name = "cookie"
path = "tests/cookie.rs"
required-features = ["cookies"]

[[test]]
name = "gzip"
path = "tests/gzip.rs"
required-features = ["gzip"]

[[test]]
name = "brotli"
path = "tests/brotli.rs"
required-features = ["brotli"]

[[test]]
name = "deflate"
path = "tests/deflate.rs"
required-features = ["deflate"]

[[test]]
name = "multipart"
path = "tests/multipart.rs"
required-features = ["multipart"]

[patch.crates-io]
h2 = { git = "https://github.com/deedy5/h2.git", branch = "0.3.26-patched" }
hyper = { git = "https://github.com/deedy5/hyper.git", branch = "v0.14.32-patched" }
