[package]
name = "reqwest"
version = "0.11.27" # remember to update html_root_url
description = "higher level HTTP client library"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client", "wasm"]
repository = "https://github.com/seanmonstar/reqwest"
documentation = "https://docs.rs/reqwest"
authors = ["Sean McArthur <sean@seanmonstar.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.63.0"
autotests = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "reqwest_unstable"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[package.metadata.playground]
features = ["cookies", "json", "multipart", "stream"]

[features]
default = ["impersonate", "json", "socks", "cookies"]

# Note: this doesn't enable the "native-tls" feature, which adds specific
# functionality for it.
default-tls = ["hyper-tls", "native-tls-crate", "__tls", "tokio-native-tls"]

# Enables native-tls specific functionality not available by default.
native-tls = ["default-tls"]
native-tls-alpn = ["native-tls", "native-tls-crate/alpn"]
native-tls-vendored = ["native-tls", "native-tls-crate/vendored"]

rustls-tls = ["rustls-tls-webpki-roots"]
rustls-tls-manual-roots = ["__rustls"]
rustls-tls-webpki-roots = ["webpki-roots", "__rustls"]
rustls-tls-native-roots = ["rustls-native-certs", "__rustls"]

boring-tls = ["__boring"]

impersonate = ["__impersonate"]

cookies = ["cookie_crate", "cookie_store"]

gzip = ["async-compression", "async-compression/gzip", "tokio-util"]

brotli = ["async-compression", "async-compression/brotli", "tokio-util"]

deflate = ["async-compression", "async-compression/zlib", "tokio-util"]

zstd = ["async-compression", "async-compression/zstd", "tokio-util"]

json = ["serde_json"]

multipart = ["mime_guess"]

# Deprecated, remove this feature while bumping minor versions.
trust-dns = ["hickory-dns"]
hickory-dns = ["hickory-resolver"]

stream = ["tokio/fs", "tokio-util", "wasm-streams"]

socks = ["tokio-socks"]

# Experimental HTTP/3 client.
http3 = ["rustls-tls-manual-roots", "h3", "h3-quinn", "quinn", "futures-channel"]

# Internal (PRIVATE!) features used to aid testing.
# Don't rely on these whatsoever. They may disappear at anytime.

# Enables common types used for TLS. Useless on its own.
__tls = ["dep:rustls-pemfile"]

# Enables common rustls code.
# Equivalent to rustls-tls-manual-roots but shorter :)
__rustls = ["hyper-rustls", "tokio-rustls", "rustls", "__tls"]

__boring = [
    "boring",
    "tokio-boring",
    "hyper-boring",
    "__tls",
    "boring-sys",
    "foreign-types",
]

__impersonate = ["__boring", "brotli", "gzip", "deflate", "zstd"]

# When enabled, disable using the cached SYS_PROXIES.
__internal_proxy_sys_no_cache = []

[dependencies]
base64 = "0.22"
http = "0.2"
url = "2"
bytes = "1"
serde = "1"
serde_urlencoded = "0.7"
tower-service = "0.3"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
sync_wrapper = "1"

# Optional deps...

## json
serde_json = { version = "1", optional = true }
## multipart
mime_guess = { version = "2", default-features = false, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
encoding_rs = "0.8"
http-body = "0.4"
hyper = { version = "0.14.32", default-features = false, features = [
    "tcp",
    "http1",
    "http2",
    "client",
    "runtime",
] }
h2 = "0.4.10"
once_cell = "1"
log = "0.4"
mime = "0.3"
percent-encoding = "2"
tokio = { version = "1", default-features = false, features = [
    "net",
    "time",
] }
pin-project-lite = "0.2"
ipnet = "2"

# Optional deps...

## default-tls
hyper-tls = { version = "0.6", optional = true }
native-tls-crate = { version = "0.2", optional = true, package = "native-tls" }
tokio-native-tls = { version = "0.3", optional = true }

# rustls-tls
hyper-rustls = { version = "0.27", default-features = false, optional = true }
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
webpki-roots = { version = "1", optional = true }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pemfile = { version = "2", optional = true }

## boring-tls
boring = { version = "4.18.0", optional = true, features = ["underscore-wildcards"] }
boring-sys = { version = "4.18.0", optional = true, features = ["underscore-wildcards"] }
tokio-boring = { version = "4.18.0", optional = true, features = [] }
hyper-boring = { version = "4.18.0", optional = true, features = [] }
foreign-types = { version = "0.5.0", optional = true }

## cookies
cookie_crate = { version = "0.18", package = "cookie", optional = true }
cookie_store = { version = "0.22", optional = true }

## compression
async-compression = { version = "0.4", default-features = false, features = ["tokio"], optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["codec", "io"], optional = true }
brotli_crate = { package = "brotli", version = "8" }

## socks
tokio-socks = { version = "0.5", optional = true }

## hickory-dns
hickory-resolver = { version = "0.25", optional = true }

# HTTP/3 experimental support
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
quinn = { version = "0.11", default-features = false, features = ["ring", "runtime-tokio"], optional = true }
futures-channel = { version = "0.3", optional = true }


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
env_logger = "0.11"
hyper = { version = "0.14.32", default-features = false, features = ["tcp", "stream", "http1", "http2", "client", "server", "runtime"] }
serde = { version = "1", features = ["derive"] }
libflate = "2"
brotli_crate = { package = "brotli", version = "8" }
zstd = "0.13"
doc-comment = "0.3"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "alloc"] }
criterion = "0.8"
tokio-util = { version = "0.7", default-features = false, features = ["codec", "io"] }
lazy_static = "1.4"


[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"

# wasm

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-streams = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.25"
features = [
    "AbortController",
    "AbortSignal",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "FormData",
    "Blob",
    "BlobPropertyBag",
    "ServiceWorkerGlobalScope",
    "RequestCredentials",
    "File",
    "ReadableStream"
]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-test = "0.3"



[[example]]
name = "json_dynamic"
path = "examples/json_dynamic.rs"
required-features = ["json"]

[[example]]
name = "json_typed"
path = "examples/json_typed.rs"
required-features = ["json"]

[[example]]
name = "tor_socks"
path = "examples/tor_socks.rs"
required-features = ["socks"]

[[example]]
name = "form"
path = "examples/form.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"



[[test]]
name = "cookie"
path = "tests/cookie.rs"
required-features = ["cookies"]

[[test]]
name = "gzip"
path = "tests/gzip.rs"
required-features = ["gzip"]

[[test]]
name = "brotli"
path = "tests/brotli.rs"
required-features = ["brotli"]

[[test]]
name = "deflate"
path = "tests/deflate.rs"
required-features = ["deflate"]

[[test]]
name = "zstd"
path = "tests/zstd.rs"
required-features = ["zstd"]

[[test]]
name = "multipart"
path = "tests/multipart.rs"
required-features = ["multipart"]

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[patch.crates-io]
h2 = { git = "https://github.com/deedy5/h2.git", branch = "0.4.10-patched" }
hyper = { git = "https://github.com/deedy5/hyper.git", branch = "v0.14.32-patched" }
